# Facial-Tracker

./: README.md  install_opencv.sh
code/: CMakeLists.txt  concurrent_queue_cv.h  cv_barrier.h  face_tracker.cpp
data/: depth_estimation_params_cpp.xml
